--- a/style.css
+++ b/style.css
@@ -5,7 +5,9 @@
 
 :root {
     --cor0: #F3F5FC;
+    --cor0-1: #c8cbd3;
     --cor1: #0A3871;
+    --cor1-1: #061f3d;
     --cor3: white;
 }
 
@@ -57,14 +59,129 @@ main {
     scale: 1.05;
 }
 
+.iniciarJogo:hover {
+    animation: mudaCor01 1s infinite;
+}
+
+@keyframes mudaCor01 {
+    0% {
+        background-color: var(--cor1);
+    }
+    50% {
+        background-color: var(--cor1-1) ;
+    }
+    100% {
+        background-color: var(--cor1);
+    }
+}
+
 .adicionarPalavra {
     border: 1.5px solid var(--cor1);
     color: var(--cor1)
 }
 
+.adicionarPalavra:hover {
+    animation: mudaCor02 1s infinite;
+}
+
+@keyframes mudaCor02 {
+    0% {
+        background-color: var(--cor0);
+    }
+    50% {
+        background-color: var(--cor0-1) ;
+    }
+    100% {
+        background-color: var(--cor0);
+    }
+}
+
 /*fim do CSS específico da página main*/
 
+/*CSS específico da página addpalavra */
 
+.main-addpalavras {
+    display: flex;
+    flex-direction: column;
+}
+
+.box-input-ap {
+    width: 680px;
+    margin: 100px auto;
+    flex: 0.6;
+}
+
+.input-palavras {
+    width: 100%;
+    height: 100%;
+    font-size: 2em;
+    background-color: var(--cor0);
+    border: none;
+}
+
+.aviso {
+    font-size: 0.8em;
+    height: 16px;
+    width: 680px;
+    margin: 5px auto;
+}
+
+.aviso img {
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.aviso p {
+    display: inline-block;
+    vertical-align: middle;
+    margin-left: 10px;
+}
+
+.but-addpalavras {
+    flex: .4;
+    width: 680px;
+    margin: auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
+    column-gap: 20px;
+}
+
+.but-salvar, .but-cancelar {
+    width: 100%;
+    height: 67px;
+    border-radius: 24px;
+    box-shadow: 4px 4px 6px rgba(0, 0, 0, 0.103);
+}
+
+.but-salvar {
+    color: var(--cor0);
+    background-color: var(--cor1);
+    border: none;
+    font-size: 1em;
+    transition: 0.5s;
+}
+
+.but-cancelar {
+    font-size: 1em;
+    border: 1.5px solid var(--cor1);
+    color: var(--cor1);
+    transition: 0.5s;
+}
+
+.but-salvar:hover, .but-cancelar:hover {
+    scale: 1.05;
+}
+
+.but-salvar:hover {
+    animation: mudaCor01 1s infinite;
+}
+
+.but-cancelar:hover {
+    animation: mudaCor02 1s infinite;
+}
+
+/* fim CSS específico addpalavra */
 
 
 
