--- a/style.css
+++ b/style.css
@@ -117,6 +117,7 @@ main {
     font-size: 2em;
     background-color: var(--cor0);
     border: none;
+    resize: none;
 }
 
 .aviso {
@@ -142,19 +143,19 @@ main {
     width: 680px;
     margin: auto;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr;
-    column-gap: 20px;
+    column-gap: 10px;
 }
 
-.but-salvar, .but-cancelar {
+.but-salvar, .but-cancelar, .but-adicionarout {
     width: 100%;
     height: 67px;
     border-radius: 24px;
     box-shadow: 4px 4px 6px rgba(0, 0, 0, 0.103);
 }
 
-.but-salvar {
+.but-salvar, .but-adicionarout {
     color: var(--cor0);
     background-color: var(--cor1);
     border: none;
@@ -169,11 +170,11 @@ main {
     transition: 0.5s;
 }
 
-.but-salvar:hover, .but-cancelar:hover {
+.but-salvar:hover, .but-cancelar:hover, .but-adicionarout:hover {
     scale: 1.05;
 }
 
-.but-salvar:hover {
+.but-salvar:hover .but-adicionarout:hover {
     animation: mudaCor01 1s infinite;
 }
 
