--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
     --cor1: #0A3871;
     --cor1-1: #061f3d;
     --cor3: white;
+    --cor4: rgb(192, 63, 63);
 }
 
 body {
@@ -214,6 +215,32 @@ main {
     margin: auto;
     border: 1px solid var(--cor1);
     border-radius: 30px;
+}
+
+.letrasCorretas {
+    display: inline-block;
+    text-align: center;
+    width: 100%;
+    height: 50%;
+    vertical-align: middle;
+    font-weight: 500;
+    color: var(--cor1);
+    line-height: 2;
+    letter-spacing: 20px;
+    font-size: 40px;
+}
+
+.letrasIncorretas {
+    display: inline-block;
+    text-align: center;
+    width: 100%;
+    height: 50%;
+    vertical-align: middle;
+    font-weight: 500;
+    color: var(--cor4);
+    line-height: 1.5;
+    letter-spacing: 20px;
+    font-size: 30px;
 }
 
 .game-grid-but {
